// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setInstruction() 1`] = `
Object {
  "meta/instructions.json": "{
  \\"tag/js\\": {}
}",
}
`;

exports[`setTag() - no tags previously set 1`] = `
"{
  \\"tag2/js\\": \\"hash2\\",
  \\"tag3/js\\": \\"hash3\\",
  \\"tag1/js\\": \\"hash1\\"
}"
`;

exports[`setTag() 1`] = `
"{
  \\"tag1/js\\": \\"hash1\\"
}"
`;
